Defining classes in python

--- a/object_oriented_programming.ipynb
+++ b/object_oriented_programming.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "For example: A **users** in amazon store  \n",
     "\n",
-    "The properties of the objects are\n",
+    "The properties of the class are\n",
     "* Id\n",
     "* Gender\n",
     "* Age\n",
@@ -70,6 +70,38 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Structure of class, objects, properties, and behavior  \n",
+    "\n",
+    "| Class |\n",
+    "| :-: |\n",
+    "| Object 1: property |\n",
+    "\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Defyning class, object, properties and behavior"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class person:\n",
+    "    name = \"X\"\n",
+    "    def walk():\n",
+    "        print(name)"
    ]
   }
  ],
