Adding and learning about inheritance

--- a/object_oriented_programming.ipynb
+++ b/object_oriented_programming.ipynb
@@ -18,6 +18,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**what is object oriented progamming?**  \n",
+    "\n",
+    "It is a methodology of programming that has the objective of creating faster, cleaner, and efficient code."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The first step for object oriented programming is to identify the object  \n",
     "An object will always be a **noun**, and it can be **physical or conceptual**  "
    ]
@@ -80,7 +89,8 @@
     "\n",
     "| Class |\n",
     "| :-: |\n",
-    "| Object 1: property |\n",
+    "| Object_1: property |\n",
+    "| Behavior_1: |\n",
     "\n",
     " "
    ]
@@ -89,12 +99,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Defyning class, object, properties and behavior"
+    "### Defyning class, object, properties and behavior"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,6 +112,169 @@
     "    name = \"X\"\n",
     "    def walk():\n",
     "        print(name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating classes with examples of Uber\n",
+    "\n",
+    "The uber example has the following classes  \n",
+    "\n",
+    "* Account\n",
+    "* Car\n",
+    "* Route\n",
+    "* Payment\n",
+    "\n",
+    "Next we will define those classes with their properties in code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Account:\n",
+    "    id = int\n",
+    "    name = str\n",
+    "    document = str\n",
+    "    email = str\n",
+    "    password = str\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Car:\n",
+    "    id = int\n",
+    "    license = str\n",
+    "    driver = str\n",
+    "    passenger = str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Route:\n",
+    "    id = int\n",
+    "    start = []\n",
+    "    end = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Payment:\n",
+    "    id = int"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the example before, the objects are statict, and cannot be used, in order to bring the objects alive, the next code need to be written"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'id': 25121642, 'license': 'WCL1656', 'driver': 'Isaac Newton', 'passenger': 'Leibniz'}\n",
+      "{'id': 14031879, 'license': 'ULM07', 'driver': 'Albert Einsterin', 'passenger': 'Niels Bohr'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Car:\n",
+    "    id = int\n",
+    "    license = str\n",
+    "    driver = str\n",
+    "    passenger = str\n",
+    "\n",
+    "car = Car()\n",
+    "car.id = 25121642\n",
+    "car.license = \"WCL1656\"\n",
+    "car.driver = \"Isaac Newton\"\n",
+    "car.passenger = \"Leibniz\"\n",
+    "\n",
+    "print(vars(car))\n",
+    "\n",
+    "car2 = Car()\n",
+    "car2.id = 14031879\n",
+    "car2.license = \"ULM07\"\n",
+    "car2.driver = \"Albert Einsterin\"\n",
+    "car2.passenger = \"Niels Bohr\"\n",
+    "\n",
+    "print(vars(car2))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How to do inheritance in code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'__module__': '__main__', '__init__': <function UberX.__init__ at 0x7f5eb0e4e160>, '__doc__': None, 'id': 923424, 'license': 'er32rg', 'driver': 'John', 'passenger': 'Michael', 'brand': 'Jaguar', 'model': 'XE'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Car:\n",
+    "    def __init__(self,id,license,driver,passenger):\n",
+    "        self.id = id\n",
+    "        self.license = license\n",
+    "        self.driver = driver\n",
+    "        self.passenger = passenger\n",
+    "        id = int\n",
+    "        license = str\n",
+    "        driver = str\n",
+    "        passenger = str\n",
+    "\n",
+    "class UberX(Car):\n",
+    "\n",
+    "    def __init__(id, license, driver, passenger, brand, model):\n",
+    "        super.__init__(self,id,license, driver,passenger)\n",
+    "        self.brand = brand\n",
+    "        self.model = model\n",
+    "        brand = str\n",
+    "        model = str\n",
+    "\n",
+    "\n",
+    "x = UberX\n",
+    "x.id = 923424\n",
+    "x.license = \"er32rg\"\n",
+    "x.driver = \"John\"\n",
+    "x.passenger = \"Michael\"\n",
+    "x.brand = \"Jaguar\"\n",
+    "x.model = \"XE\"\n",
+    "\n",
+    "print(vars(x))\n"
    ]
   }
  ],
