Adding and learning the concept of polimorphism

--- a/object_oriented_programming.ipynb
+++ b/object_oriented_programming.ipynb
@@ -41,7 +41,8 @@
     "\n",
     "All objects have **properties** and **behavior**  \n",
     "\n",
-    "And the process of identifying a class is called *Abstraction*"
+    "And the process of identifying a class is called **Abstraction**\n",
+    "This is the 1st concept out of 4th of OOP"
    ]
   },
   {
@@ -188,18 +189,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'id': 25121642, 'license': 'WCL1656', 'driver': 'Isaac Newton', 'passenger': 'Leibniz'}\n",
-      "{'id': 14031879, 'license': 'ULM07', 'driver': 'Albert Einsterin', 'passenger': 'Niels Bohr'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Car:\n",
     "    id = int\n",
@@ -228,22 +220,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How to do inheritance in code"
+    "The next concept is **Inheritance**  \n",
+    "\n",
+    "Inheritance is the pass of propoerties and/or behavior from a father class, to a child class, an example is set  \n",
+    "This is the 2dn out of 4th concept of OOP"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'__module__': '__main__', '__init__': <function UberX.__init__ at 0x7f5eb0e4e160>, '__doc__': None, 'id': 923424, 'license': 'er32rg', 'driver': 'John', 'passenger': 'Michael', 'brand': 'Jaguar', 'model': 'XE'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Car:\n",
     "    def __init__(self,id,license,driver,passenger):\n",
@@ -275,6 +262,148 @@
     "x.model = \"XE\"\n",
     "\n",
     "print(vars(x))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next concept is **Encapsulment**  \n",
+    "Encapsulment is the packing and/or hiding of data and functions, you can hide the internal state of the object from the outside  \n",
+    "encapsulemnt is the 3rd out of 4th conpcetps of OOP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Counter:\n",
+    "    def __init__(self):\n",
+    "        self.current = 0\n",
+    "    \n",
+    "    def increment(self):\n",
+    "        self.current += 1\n",
+    "    \n",
+    "    def value(self):\n",
+    "        return self.current\n",
+    "\n",
+    "    def reset(self):\n",
+    "        self.current = 0\n",
+    "    \n",
+    "counter = Counter()\n",
+    "\n",
+    "\n",
+    "counter.increment()\n",
+    "counter.increment()\n",
+    "counter.increment()\n",
+    "\n",
+    "print(counter.value())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Counter:\n",
+    "    def __init__(self):\n",
+    "        self.current = 0\n",
+    "\n",
+    "    def increment(self):\n",
+    "        self.current += 1\n",
+    "\n",
+    "    def value(self):\n",
+    "        return self.current\n",
+    "\n",
+    "    def reset(self):\n",
+    "        self.current = 0\n",
+    "\n",
+    "counter = Counter()\n",
+    "\n",
+    "counter.increment()\n",
+    "counter.increment()\n",
+    "counter.current = -999\n",
+    "\n",
+    "print(counter.value())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the example above, even do the result of counter.increment should be 2, you could access counter.current from outside, and change the value.  \n",
+    "Encapsulment works for this, in order to avoid outside change and keep it statitc.  \n",
+    "\n",
+    "And you stablish encapsulment by applying a double underscore: __attribute"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Counter:\n",
+    "    def __init__(self):\n",
+    "        self.__current = 0\n",
+    "\n",
+    "    def increment(self):\n",
+    "        self.__current += 1\n",
+    "\n",
+    "    def value(self):\n",
+    "        return self.__current\n",
+    "\n",
+    "    def reset(self):\n",
+    "        self.__current = 0\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The last concept is called **Polimorphism**  \n",
+    "It refers literally to different forms, but for programming, it means to the use of a single type entity (method,operator, object) to represent different type of scenaraios. In other words, it means that you can tranform a single entity to do or be different things"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class cat:\n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "    \n",
+    "    def say_hi(self):\n",
+    "        print(\"Hello i am a cat and my name is\", self.name, \"and i am\", self.age, \"years old\")\n",
+    "    \n",
+    "    def make_sound(self):\n",
+    "        print(\"Meow\")\n",
+    "    \n",
+    "class dog:\n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "    \n",
+    "    def say_hi(self):\n",
+    "        print(\"Hello i am a dog and my name is\", self.name, \"and i am \", self.age, \"years old\")\n",
+    "    \n",
+    "    def make_sound(self):\n",
+    "        print(\"Bark\")\n",
+    "\n",
+    "cat1 = cat(\"Wishkers\", 5)\n",
+    "dog1 = dog(\"Bella\", 3)\n",
+    "\n",
+    "for animal in (cat1,dog1):\n",
+    "    animal.say_hi()\n",
+    "    animal.make_sound()\n"
    ]
   }
  ],
