--- a/python_projects/intermidiate_python/list_dictionaries_comprehension.ipynb
+++ b/python_projects/intermidiate_python/list_dictionaries_comprehension.ipynb
@@ -86,11 +86,119 @@
     "    list_3 = [item1,item2,item3]\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Examples with dictionary containing lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "prime_numbers - [1, 2, 3, 5, 7]\n",
+      "natural_numbers - [10, 15, 16, 77]\n",
+      "float_numbers - [15.5, 9.8, 3.14]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def run():\n",
+    "   dict = {\n",
+    "       \"prime_numbers\": [1,2,3,5,7],\n",
+    "       \"natural_numbers\": [10,15,16,77],\n",
+    "       \"float_numbers\": [15.5,9.8,3.14]\n",
+    "   }\n",
+    "\n",
+    "   for key, value in dict.items():\n",
+    "       print(key, \"-\", value)\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example of list containing dictionaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run():\n",
+    "    list1 = [\n",
+    "        {\"firstname\": \"Russel\", \"lastname\": \"Wallace\"},\n",
+    "        {\"firstname\": \"Charles\", \"lastname\": \"Darwin\"},\n",
+    "        {\"firstname\": \"Gregor\", \"lastname\": \"Mendel\"}\n",
+    "    ]\n",
+    "\n",
+    "    for i in list1:\n",
+    "        print(i[\"firstname\"] + i[\"lastname\"])\n",
+    "\n",
+    "\n",
+    "if __name__ == \"main\":\n",
+    "    run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "group 1 mean is 173.4 group 2 mean is 177.8 group 3 mean is 177.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "group_1 = [169,177,174,170,177]\n",
+    "group_2 = [186,168,167,189,179]\n",
+    "group_3 = [171,175,172,180,191]\n",
+    "    \n",
+    "mean_group_1 = statistics.mean(group_1)\n",
+    "mean_group_2 = statistics.mean(group_2)\n",
+    "mean_group_3 = statistics.mean(group_3)\n",
+    "\n",
+    "print(\"group 1 mean is\", mean_group_1,\"group 2 mean is\", mean_group_2, \"group 3 mean is\", mean_group_3)"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.10 64-bit",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
