Fixing mistake of format of lists and dictionaries

--- a/python_projects/intermidiate_python/list_dictionaries_comprehension.ipynb
+++ b/python_projects/intermidiate_python/list_dictionaries_comprehension.ipynb
@@ -75,14 +75,14 @@
    "outputs": [],
    "source": [
     "list1 = [\n",
-    "    dict_1 = {item1,item2,item3}\n",
-    "    dict_2 = {item1,item2,item3}\n",
+    "    dict_1 = {item1,item2,item3},\n",
+    "    dict_2 = {item1,item2,item3},\n",
     "    dict_3 = {item1,item2,item3}\n",
     "]\n",
     "\n",
     "dictionary1 = {\n",
-    "    list_1 = [item1,item2,item3]\n",
-    "    list_2 = [item1,item2,item3]\n",
+    "    list_1 = [item1,item2,item3],\n",
+    "    list_2 = [item1,item2,item3],\n",
     "    list_3 = [item1,item2,item3]\n",
     "}"
    ]
