--- a/python_projects/intermidiate_python/list_dictionaries_comprehension.ipynb
+++ b/python_projects/intermidiate_python/list_dictionaries_comprehension.ipynb
@@ -96,19 +96,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "prime_numbers - [1, 2, 3, 5, 7]\n",
-      "natural_numbers - [10, 15, 16, 77]\n",
-      "float_numbers - [15.5, 9.8, 3.14]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def run():\n",
     "   dict = {\n",
@@ -134,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,9 +135,7 @@
     "        {\"firstname\": \"Gregor\", \"lastname\": \"Mendel\"}\n",
     "    ]\n",
     "\n",
-    "    for i in list1:\n",
-    "        print(i[\"firstname\"] + i[\"lastname\"])\n",
-    "\n",
+    "    print(list1)\n",
     "\n",
     "if __name__ == \"main\":\n",
     "    run()"
@@ -155,17 +143,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "group 1 mean is 173.4 group 2 mean is 177.8 group 3 mean is 177.8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "group_1 = [169,177,174,170,177]\n",
     "group_2 = [186,168,167,189,179]\n",
@@ -176,6 +156,102 @@
     "mean_group_3 = statistics.mean(group_3)\n",
     "\n",
     "print(\"group 1 mean is\", mean_group_1,\"group 2 mean is\", mean_group_2, \"group 3 mean is\", mean_group_3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Printing the square of the the first 100 numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "squares = []\n",
+    "for i in range(1,101):\n",
+    "    if i % 3 == 0:\n",
+    "        squares.append(i**2)\n",
+    "        \n",
+    "print(squares)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## List Comprehension\n",
+    "\n",
+    "According to Python Documentation:  \n",
+    "\n",
+    "List comprehensions provide a concise way to create lists. Common applications are to make **new lists where each element is the result of some operations applied to each member of another sequence** or iterable, or to create a subsequence of those elements that satisfy a certain condition.  \n",
+    "\n",
+    "References: https://docs.python.org/3/tutorial/datastructures.html#list-comprehensions\n",
+    "\n",
+    "Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "squares = [i for i in range(1,10000) if i % 36 == 0]\n",
+    "print(squares)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, code for dictionary, and dictionary comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cubes = {}\n",
+    "for i in range(101):\n",
+    "        if i % 3 != 0:\n",
+    "            cubes[i] = i**3\n",
+    "\n",
+    "print(cubes)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Examples of dictionary comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cubes = {i: i**3 for i in range(101) if i % 3 != 0}\n",
+    "print(cubes)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cubes = {i:round(i**0.5,2) for i in range(1001)}\n",
+    "print(cubes)"
    ]
   }
  ],
