Fix of one title element

--- a/python_projects/intermidiate_python/list_dictionaries_comprehension.ipynb
+++ b/python_projects/intermidiate_python/list_dictionaries_comprehension.ipynb
@@ -184,7 +184,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## List Comprehension\n",
+    "## List and Dictionary Comprehension\n",
     "\n",
     "According to Python Documentation:  \n",
     "\n",
