Adding to the managing file

--- a/python_projects/intermidiate_python/managing_files.ipynb
+++ b/python_projects/intermidiate_python/managing_files.ipynb
@@ -54,9 +54,77 @@
     "\n",
     "The opening modes will depend on what you want to do with the file.  \n",
     "\n",
-    "1. R = Reading mode. You use this type when you only want to use the data inside the file, and not actually change it\n",
-    "2. W = Writing mode. You overwrite the file\n",
-    "3. A = Append mode. The add to file"
+    "1. r = Reading mode. You use this type when you only want to use the data inside the file, and not actually change it\n",
+    "2. w = Writing mode. You overwrite the file\n",
+    "3. a = Append mode. The add to file\n",
+    "4. x = Create. Creates the specified file, error if the file already exists"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[33, 68, 75, 12, 64, 39, 95, 41, 45, 21]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = []\n",
+    "\n",
+    "with open(\"file_to_operate/data_set1\", \"r\") as x:\n",
+    "    for line in x:\n",
+    "        numbers.append(int(line))\n",
+    "\n",
+    "print(numbers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Extra!\n",
+    "\n",
+    "An extra argument can be used to specified if the file should be handeled as binary or text mode\n",
+    "\n",
+    "t = Text. Default mode  \n",
+    "b = Binary. Binary Mode  \n",
+    "\n",
+    "Another syntax that can be used is"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[33, 68, 75, 12, 64, 39, 95, 41, 45, 21]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#r mode to read, and t mode to indicate it will be used as a text file\n",
+    "numbers = []\n",
+    "x = open(\"file_to_operate/data_set1\", \"rt\")\n",
+    "for line in x:\n",
+    "    numbers.append(int(line))\n",
+    "\n",
+    "print(numbers)\n"
    ]
   }
  ],
@@ -70,7 +138,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.10"
   },
   "orig_nbformat": 4
