Fixing error in a table from data_types file

--- a/python_projects/basic_python/data_types.ipynb
+++ b/python_projects/basic_python/data_types.ipynb
@@ -32,9 +32,9 @@
     "\n",
     "| Data Types | List | Tuple | Set | Dictionary |\n",
     "| :-: | :-: | :-: | :-: | :-: |\n",
-    "| Ordered | - [x] | - [x] | - [] | - [x] |\n",
-    "| Changable | - [x] | - [] | - [] | - [x] |\n",
-    "| Duplicates | - [x] | - [x] | - [] | - [] |"
+    "| Ordered | YES | YES | NO | YES |\n",
+    "| Changable | YES | NO | NO | YES |\n",
+    "| Duplicates | YES | YES | NO | NO |"
    ]
   }
  ],
