adding bernoulli distribution

--- a/math_stats_and_probability/basic_probability.ipynb
+++ b/math_stats_and_probability/basic_probability.ipynb
@@ -158,6 +158,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### II.I Continious Probability Distribution "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "A probability distribution is a statistical function that describes all the possible values and likelihoods that a random variable can take within a given range.\n",
     "\n",
     "Reference : https://www.investopedia.com/terms/p/probabilitydistribution.asp#:~:text=A%20probability%20distribution%20is%20a,\n",
@@ -165,7 +172,7 @@
     "\n",
     "***P(x ≥ 0)***\n",
     "\n",
-    "Given P, what is the probability of x ≥ 0"
+    "Given P, what is the probability of x ≥ 0\n"
    ]
   },
   {
@@ -220,6 +227,103 @@
     "plt.fill_between(x_fill, y_fill, 0,\n",
     "                 alpha = 0.3, color = 'blue', where= x >= 0)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### II.II Discrete Probability Distribution or Bernoulli(Binomial) Probability Distribution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A frequency distribution of the possible number of successful outcomes in a given number of trials in each of which there is the same boolean discrete probability of success.\n",
+    "\n",
+    "Given *n* as the number of repetitions and *p* the probability, and *k* the exact succeses in *n* trials\n",
+    "\n",
+    "$$\n",
+    "  \\ (n k) \\, = \\frac{\\ n!}{k!(n-k)!}\n",
+    "$$\n",
+    "\n",
+    "Consider the next situation\n",
+    "\n",
+    "There is 3 coins, and the coins are thrown   \n",
+    "What is the probability of getting 2 heads\n",
+    "\n",
+    "$$\n",
+    "  \\ (3,2) \\, = \\frac{\\ 3}{2!(3-2)!}\n",
+    "$$\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The formula above considers a fair probability between the 2 possible values, but sometimes it isn´t, so the formula for when it insn´t fair is   \n",
+    "\n",
+    "$$\n",
+    "P(k, n; p) = {n \\choose k} p^k (1-p)^{n-k} = \\frac{n!}{k!(n-k)!}p^k (1-p)^{n-k}\n",
+    "$$   \n",
+    "\n",
+    "And we can make transform it into a pyhton function like the next one"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.375"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from numpy.random import binomial\n",
+    "from scipy.stats import binom\n",
+    "from math import factorial\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def binomial(k, n, p):\n",
+    "  return factorial(n)/(factorial(k)*(factorial(n-k)))*pow(p,k)*pow(1-p, n-k)\n",
+    "\n",
+    "## We can try the function with the same example above\n",
+    "binomial(2,3, 0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.375"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## And we can use the scipy library in the next way\n",
+    "\n",
+    "dist = binom(3, 0.5)\n",
+    "dist.pmf(2)"
    ]
   }
  ],
