Correcting binomial and normal distribution, and adding the MLE

--- a/math_stats_and_probability/basic_probability.ipynb
+++ b/math_stats_and_probability/basic_probability.ipynb
@@ -325,6 +325,13 @@
     "dist = binom(3, 0.5)\n",
     "dist.pmf(2)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## III. MLE (Maximun Likelihood Estimate)"
+   ]
   }
  ],
  "metadata": {
