linear_algebra_with_python.ipynb

--- a/math_stats_and_probability/linear_algebra_with_python.ipynb
+++ b/math_stats_and_probability/linear_algebra_with_python.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -74,6 +74,98 @@
    "metadata": {},
    "source": [
     "## II. Basic Operations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dimensions of the magnitudes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The shape of the scalar is (1,)\n",
+      "The shape of the vector is (4,)\n",
+      "The shape of the matrix is (3, 4)\n",
+      "The shape of the tensor is (3, 2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Getting the shape of the differents scalars, vectors, matrix and tensors\n",
+    "\n",
+    "print(\"The shape of the scalar is\", scalar.shape)\n",
+    "print(\"The shape of the vector is\", vector.shape)\n",
+    "print(\"The shape of the matrix is\", matrix.shape)\n",
+    "print(\"The shape of the tensor is\", tensor.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The amount of numbers in the scalar is 1\n",
+      "The amount of numbers in the vector is 4\n",
+      "The amount of numbers in the matrix is 12\n",
+      "The amount of numbers in the tensor is 18\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Size is the function of the multiplication of the rows and columns\n",
+    "\n",
+    "print(\"The amount of numbers in the scalar is\", scalar.size)\n",
+    "print(\"The amount of numbers in the vector is\", vector.size)\n",
+    "print(\"The amount of numbers in the matrix is\", matrix.size)\n",
+    "print(\"The amount of numbers in the tensor is\", tensor.size)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Transpose\n",
+    "\n",
+    "Definition: Is an operator which flips a matrix over its diagonal; that is, it switches the row and column indices of the matrix A by producing another matrix, often denoted by **A<sup>T</sup>**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The matrix is [[10 25 63 45]\n",
+      " [33 12 19 74]\n",
+      " [55 65 17 23]]\n",
+      "The matrix transpose is [[10 33 55]\n",
+      " [25 12 65]\n",
+      " [63 19 17]\n",
+      " [45 74 23]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Showing the differences bewteen matrix and transpose matrix\n",
+    "\n",
+    "print(\"The matrix is\",matrix)\n",
+    "print(\"The matrix transpose is\",matrix.T) "
    ]
   },
   {
