Making sum of matrices and matrix with vectors or matrices with different shapes with broadcasting

--- a/math_stats_and_probability/linear_algebra_with_python.ipynb
+++ b/math_stats_and_probability/linear_algebra_with_python.ipynb
@@ -169,6 +169,108 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum of matrix 1 and 2 [[14 11]\n",
+      " [ 8  7]]\n",
+      "Sum of matrix 1 and matrix 1 transpose [[10  9]\n",
+      " [ 9 12]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Sum of matrix\n",
+    "\n",
+    "matrix = [[5,7],[2,6]]\n",
+    "matrix = np.array(matrix)\n",
+    "\n",
+    "matrix2 = [[9,4],[6,1]]\n",
+    "matrix2 = np.array(matrix2)\n",
+    "\n",
+    "##Sum of matrix 1 and 2\n",
+    "matrixsum = matrix + matrix2\n",
+    "print(\"Sum of matrix 1 and 2\",matrixsum) \n",
+    "\n",
+    "##Sum of matrix 1 and the matrix 1 transpose\n",
+    "matrixsum2 = matrix + matrix.T\n",
+    "print(\"Sum of matrix 1 and matrix 1 transpose\",matrixsum2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 4  6]\n",
+      " [ 8 10]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Sum of matrix and scalar\n",
+    "\n",
+    "matrix = [[2,4],[6,8]]\n",
+    "matrix = np.array(matrix)\n",
+    "\n",
+    "scalar = [2]\n",
+    "scalar = np.array(scalar)\n",
+    "\n",
+    "matrix_scalar_sum = matrix + scalar\n",
+    "print(matrix_scalar_sum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Matrix and Vectors sum (broadcasting)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Broadcasting is extending the matrix of least size, to make it fit the bigger one"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 4  6]\n",
+      " [ 8 10]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Broadcasting vector into matrix\n",
+    "\n",
+    "matrix = [[2,4],[6,8]]\n",
+    "matrix = np.array(matrix)\n",
+    "\n",
+    "vector = [2,2]\n",
+    "vector = np.array(vector)\n",
+    "\n",
+    "matrix_vector_sum = matrix + vector\n",
+    "print(matrix_vector_sum)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
