--- a/math_stats_and_probability/linear_algebra_with_python.ipynb
+++ b/math_stats_and_probability/linear_algebra_with_python.ipynb
@@ -281,6 +281,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Inner Product and the difference between multiplication\n",
+    " \n",
+    "It is a way to multiply vectors together, with the result of this multiplication being a scalar."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 4  8]\n",
+      " [12 16]]\n",
+      "[12 28]\n"
+     ]
+    }
+   ],
+   "source": [
+    "vector = np.array([2,2])\n",
+    "matrix = np.array([[2,4],[6,8]])\n",
+    "\n",
+    "## This is the way to multiply a matrix times a vector and the result you get is a matrix the same size as the one from the multiplication\n",
+    "mult = matrix * vector\n",
+    "print(mult)\n",
+    "\n",
+    "## In this process, it is applied a matrix and a vector, and the result is vector\n",
+    "int_prod = matrix.dot(vector)\n",
+    "print(int_prod)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## IV. Lineal Equations Systems"
    ]
   },
