--- a/math_stats_and_probability/linear_algebra_with_python.ipynb
+++ b/math_stats_and_probability/linear_algebra_with_python.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,16 +288,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 4  8]\n",
-      " [12 16]]\n",
-      "[12 28]\n"
+      "The result of inner product of matrix and a vector with in-built python function is [12 28]\n",
+      "The result of inner product of matrix and a vector with numpy function is [12 28]\n"
      ]
     }
    ],
@@ -307,11 +306,90 @@
     "\n",
     "## This is the way to multiply a matrix times a vector and the result you get is a matrix the same size as the one from the multiplication\n",
     "mult = matrix * vector\n",
-    "print(mult)\n",
     "\n",
-    "## In this process, it is applied a matrix and a vector, and the result is vector\n",
+    "## In this process, it is applied a matrix and a vector, and the result is vector. There are 2 ways of doing this\n",
+    "\n",
+    "#The .dot function\n",
     "int_prod = matrix.dot(vector)\n",
-    "print(int_prod)"
+    "print(\"The result of inner product of matrix and a vector with in-built python function is\",int_prod)\n",
+    "\n",
+    "#And the np.dot function\n",
+    "\n",
+    "int_prod2 = np.dot(matrix,vector)\n",
+    "print(\"The result of inner product of matrix and a vector with numpy function is\",int_prod2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inner Product between matrices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The result of inner product between two matrices is [[ 24  46]\n",
+      " [ 60 110]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Getting the inner product of two matrices of the same shape\n",
+    "matrix = np.array([[2,4],[6,8]])\n",
+    "matrix2 = np.array([[6,9],[3,7]])\n",
+    "\n",
+    "inn_prod = matrix.dot(matrix2)\n",
+    "print(\"The result of inner product between two matrices is\", inn_prod)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Properties of matrices\n",
+    "\n",
+    "**Associative**   \n",
+    "*(AB)C = A(BC)*\n",
+    "\n",
+    "**Distributive**   \n",
+    "*A(B+C) = AB + AC*\n",
+    "\n",
+    "**Conmutative**   \n",
+    "*BC = CB*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "shapes (2,2) and (3,2) not aligned: 2 (dim 1) != 3 (dim 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/home/david_gza/Archivos/data_science/git/math_stats_and_probability/linear_algebra_with_python.ipynb Cell 22\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/david_gza/Archivos/data_science/git/math_stats_and_probability/linear_algebra_with_python.ipynb#X34sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m A \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([[\u001b[39m1\u001b[39m,\u001b[39m8\u001b[39m],[\u001b[39m4\u001b[39m,\u001b[39m2\u001b[39m],[\u001b[39m6\u001b[39m,\u001b[39m5\u001b[39m]])\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/david_gza/Archivos/data_science/git/math_stats_and_probability/linear_algebra_with_python.ipynb#X34sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m## Associative\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/david_gza/Archivos/data_science/git/math_stats_and_probability/linear_algebra_with_python.ipynb#X34sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m Ass \u001b[39m=\u001b[39m C\u001b[39m.\u001b[39;49mdot(A\u001b[39m.\u001b[39;49mdot(B)) \u001b[39m==\u001b[39m A\u001b[39m.\u001b[39mdot(B\u001b[39m.\u001b[39mdot(C))\n",
+      "\u001b[0;31mValueError\u001b[0m: shapes (2,2) and (3,2) not aligned: 2 (dim 1) != 3 (dim 0)"
+     ]
+    }
+   ],
+   "source": [
+    "C = np.array([[2,4],[6,8]])\n",
+    "B = np.array([[6,9],[3,7]])\n",
+    "A = np.array([[1,8],[4,2],[6,5]])\n",
+    "\n",
+    "## Associative\n",
+    "Ass = C.dot(A.dot(B)) == A.dot(B.dot(C))\n",
+    "\n"
    ]
   },
   {
